--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: macos: install prerequisites
+      - name: macos install prerequisites
         if: matrix.os == 'macos'
         run: brew install gnu-tar gcc
-      - name: ubuntu: install prerequisites
+      - name: ubuntu install prerequisites
         if: matrix.os == 'ubuntu'
         run: sudo apt install gdc
 
