--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         if: matrix.os == 'macos'
         run: brew install gnu-tar gcc
       - name: ubuntu install prerequisites
-        if: matrix.os == 'ubuntu'
+        if: matrix.os == 'linux'
         run: sudo apt install gdc
 
       - name: Download
