--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,14 @@ jobs:
   publish:
     strategy:
       matrix:
-        runner: [ubuntu-latest, macos-latest]
+        runner: [ubuntu-latest]
         include:
           - runner: ubuntu-latest
             os: linux
             tar: tar
-          - runner: macos-latest
-            os: macos
-            tar: gtar
+          # - runner: macos-latest
+          #   os: macos
+          #   tar: gtar
     runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v3
@@ -28,7 +28,7 @@ jobs:
           which gdc
       - name: ubuntu install prerequisites
         if: matrix.os == 'linux'
-        run: sudo apt install gdc
+        run: sudo apt install gdc libgmp-dev libmpc-dev libmpfr-dev binutils-dev
 
       - name: Download
         run: |
