--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,9 @@ jobs:
   publish:
     strategy:
       matrix:
-        runner: [ubuntu-latest]
+        runner: [ubuntu-18.04]
         include:
-          - runner: ubuntu-latest
+          - runner: ubuntu-18.04
             os: linux
             tar: tar
           # - runner: macos-latest
