--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 gnu-*
-binutils
 newlib-aarch64-*
 newlib-riscv64-*
 ldc2*
-bin*
 build-newlib
 build-gcc1
 build-gcc2
 build-binutils
+/binutils
+/gcc
+/newlib
+/bin
